--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=none
 server.port=8082
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.flyway.baselineOnMigrate = true
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
