all properties added

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -25,6 +25,7 @@ resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
 resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=5s
 resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.retry.configs.default.minimum-number-of-calls=5
 
 #Resilience4j Timeout Properties
 resilience4j.timelimiter.configs.default.timeout-duration=3s
