--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=notification-service
+server.port=8087
 
 # Kafka Consumer Properties
-spring.kafka.bootstrap-servers=localhost:9200
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-service
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.properties.schema.registry.url=http://127.0.0.1:8085
-spring.kafka.consumer.properties.specific.avro.reader=true
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.properties.spring.json.type.mapping=event:com.nipundas.notification_service.order.event.OrderPlacedEvent
 
+#spring.kafka.consumer.properties.schema.registry.url=http://127.0.0.1:8085
+#spring.kafka.consumer.properties.specific.avro.reader=true
+
+# Mail Properties
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=1ee0dd5771d659
+spring.mail.password=4f9eb34bacafd3
+#spring.mail.protocol=smtp
