--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -5,11 +5,18 @@ server.port=8087
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-service
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-#spring.kafka.consumer.properties.spring.json.type.mapping=event:com.nipundas.notification_service.order.event.OrderPlacedEvent
-
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.type.mapping=event:com.nipundas.microservices.order.event.OrderPlacedEvent
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=io.confluent.kafka.serializers.KafkaAvroDeserializer
 #spring.kafka.consumer.properties.schema.registry.url=http://127.0.0.1:8085
-#spring.kafka.consumer.properties.specific.avro.reader=true
+spring.kafka.consumer.properties.specific.avro.reader=true
+
+
+
+
 
 # Mail Properties
 spring.mail.host=sandbox.smtp.mailtrap.io
