--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.kafka.consumer.properties.spring.json.type.mapping=event:com.nipundas.mic
 spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=io.confluent.kafka.serializers.KafkaAvroDeserializer
-#spring.kafka.consumer.properties.schema.registry.url=http://127.0.0.1:8085
+spring.kafka.consumer.properties.schema.registry.url=http://127.0.0.1:8085
 spring.kafka.consumer.properties.specific.avro.reader=true
 
 
