all files updated with grafana stack config

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -36,3 +36,9 @@ resilience4j.retry.configs.default.wait-duration=2s
 # if ext. service doesn't respond in 2s, it ig going to retry it 3 times
 # if retry also doesn't work, then timeout-duration will kick-in, and open the circuit breaker
 
+
+
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=product-service
+
+management.tracing.sampling.probability=1.0
