--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,5 +5,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
 management.endpoints.web.exposure.include=health, info, metrics, prometheus
+
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=product-service
+
+management.tracing.sampling.probability=1.0
