--- a/k8s/manifests/infrastructure/mysql.yaml
+++ b/k8s/manifests/infrastructure/mysql.yaml
@@ -30,10 +30,13 @@ spec:
               name: mysql-data
             - mountPath: /docker-entrypoint-initdb.d
               name: mysql-initdb-config
-    volumes:
-      - name: mysql-data
-        persistentVolumeClaim:
-          claimName: mysql-pvc
+      volumes:
+        - name: mysql-data
+          persistentVolumeClaim:
+            claimName: mysql-pvc
+        - name: mysql-initdb-config
+          configMap:
+            name: mysql-initdb-config
 ---
 apiVersion: v1
 kind: Service
@@ -82,7 +85,7 @@ spec:
       storage: 1Gi
 ---
 apiVersion: v1
-kind: configMap
+kind: ConfigMap
 metadata:
   name: mysql-initdb-config
 data:
