--- a/k8s/manifests/infrastructure/keycloak-mysql.yaml
+++ b/k8s/manifests/infrastructure/keycloak-mysql.yaml
@@ -40,7 +40,13 @@ spec:
                 secretKeyRef:
                   key: MYSQL_PASSWORD
                   name: keycloak-mysql-secrets
-
+          volumeMounts:
+            - name: keycloak-mysql-data
+              mountPath: /var/lib/mysql
+      volumes:
+        - name: keycloak-mysql-data
+          persistentVolumeClaim:
+            claimName: keycloak-mysql-pvc
 
 ---
 apiVersion: v1
