--- a/k8s/manifests/infrastructure/schema-registry.yaml
+++ b/k8s/manifests/infrastructure/schema-registry.yaml
@@ -1,18 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  creationTimestamp: null
   labels:
-    app: schema-registry
-  name: schema-registry
+    app: schema-reg
+  name: schema-reg
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: schema-registry
+      app: schema-reg
+  strategy: {}
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        app: schema-registry
+        app: schema-reg
     spec:
       containers:
         - image: confluentinc/cp-schema-registry:7.5.0
@@ -25,7 +28,7 @@ spec:
             - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
               value: 'broker:29092'
             - name: SCHEMA_REGISTRY_LISTENERS
-              value: http://0.0.0.0:8081
+              value: http://schema-registry:8081
 
 ---
 
@@ -33,15 +36,15 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: schema-registry
-  name: schema-registry
+    app: schema-reg
+  name: schema-reg
 spec:
   ports:
-    - name: 8081-8081
-      port: 8081
+    - port: 8081
       protocol: TCP
       targetPort: 8081
   selector:
-    app: schema-registry
+    app: schema-reg
   type: ClusterIP
+
 
