--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -42,3 +42,7 @@ management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=product-service
 
 management.tracing.sampling.probability=1.0
+
+
+
+loki.url=http://localhost:3100/loki/api/v1/push
