--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=inventory-service
 
 management.tracing.sampling.probability=1.0
+
+
+loki.url=http://localhost:3100/loki/api/v1/push
