--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.mail.port=2525
 spring.mail.username=1ee0dd5771d659
 spring.mail.password=4f9eb34bacafd3
 #spring.mail.protocol=smtp
+
+
+
+
+loki.url=http://localhost:3100/loki/api/v1/push
