--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -54,3 +54,6 @@ management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=product-service
 
 management.tracing.sampling.probability=1.0
+
+
+loki.url=http://localhost:3100/loki/api/v1/push
