--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -46,3 +46,8 @@ management.tracing.sampling.probability=1.0
 
 
 loki.url=http://localhost:3100/loki/api/v1/push
+
+
+product.service.url=http://localhost:8080
+order.service.url=http://localhost:8081
+inventory.service.url=http://localhost:8082
