--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=none
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.flyway.baselineOnMigrate = true
-inventory.url=http://localhost:8082
+inventory.service.url=http://localhost:8082
 
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
@@ -46,9 +46,6 @@ spring.kafka.template.default-topic=order-placed
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 spring.kafka.producer.properties.schema.registry.url=http://localhost:8085
-
-
-
 
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=product-service
