--- a/k8s/manifests/applications/inventory-service.yml
+++ b/k8s/manifests/applications/inventory-service.yml
@@ -15,6 +15,11 @@ spec:
       containers:
         - name: inventory-service
           image: nipundas10/new-inventory-service:latest
+          resources:
+            requests:
+              memory: "512Mi"  # Increase the requested memory
+            limits:
+              memory: "1Gi"    # Set a higher memory limit
           env:
             - name: SPRING_DATASOURCE_URL
               valueFrom:
