--- a/k8s/manifests/applications/notification-service.yml
+++ b/k8s/manifests/applications/notification-service.yml
@@ -15,6 +15,11 @@ spec:
       containers:
         - name: notification-service
           image: nipundas10/new-notification-service:latest
+          resources:
+            requests:
+              memory: "512Mi"  # Increase the requested memory
+            limits:
+              memory: "1Gi"    # Set a higher memory limit
           env:
             - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
               valueFrom:
