--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=api-gateway
 server.port=9000
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-microservices-security-realm
 
+#Swagger config
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.urls[0].name=Product Service
@@ -17,7 +18,6 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #Resilience4j Properties
-
 resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
 resilience4j.circuitbreaker.configs.default.slidingWindowType=COUNT_BASED
 resilience4j.circuitbreaker.configs.default.slidingWindowSize=10
@@ -37,14 +37,13 @@ resilience4j.retry.configs.default.wait-duration=2s
 # if retry also doesn't work, then timeout-duration will kick-in, and open the circuit breaker
 
 
-
+#Grafana metrics
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.observations.key-values.application=product-service
-
 management.tracing.sampling.probability=1.0
 
 
-
+#Loki
 loki.url=http://localhost:3100/loki/api/v1/push
 
 
